cmake_minimum_required(VERSION 3.16)
enable_testing()
include(GoogleTest)
file(GLOB_RECURSE YourSQL_FULL_TEST_SOURCE_FILES "${PROJECT_SOURCE_DIR}/test/*/*test.cpp")
find_package(Threads REQUIRED)

foreach (YourSQL_test_sources_file ${YourSQL_FULL_TEST_SOURCE_FILES})
    get_filename_component(YourSQL_test_filename ${YourSQL_test_sources_file} NAME)
    string(REPLACE ".cpp" "" YourSQL_test_name ${YourSQL_test_filename})
    add_executable(${YourSQL_test_name} EXCLUDE_FROM_ALL ${YourSQL_test_sources_file})
    target_link_libraries(${YourSQL_test_name} gtest gmock_main sql_parser YourSQL)
#    target_link_libraries(${YourSQL_test_name} gtest gmock_main Threads::Threads sql_parser)
    set_target_properties(${YourSQL_test_name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test" COMMAND ${YourSQL_test_name})
    add_test(NAME ${YourSQL_test_name} COMMAND ${YourSQL_test_name})
endforeach ()
